<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/lightGrey"
        android:padding="20dp"
        android:textSize="48sp"
        android:gravity="end|bottom"
        android:text="@string/calculator"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

       <Button
           android:id="@+id/btn7"
           android:layout_margin="2dp"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:onClick="onDigit"
           android:text="@string/_7"
           tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn8"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_8"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn9"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_9"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Divide"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn4"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_4"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn5"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_5"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn6"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_6"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnMult"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Multiplication"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn1"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_1"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn2"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_2"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn3"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_3"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnSub"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Subtract"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnDot"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDecimalPoint"
            android:text="@string/Dot"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn0"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_0"
            tools:ignore="UsingOnClickInXml" />



        <Button
            android:id="@+id/btnCLR"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="@string/clr"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnADD"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Addition"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnEqual"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onEqual"
            android:text="@string/Equal"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

</LinearLayout>